# simul

./: README.md
mvg/: .gitignore  Cargo.toml
mvg/src/: main.rs  point.rs
wgpu-dev/: Cargo.toml
wgpu-dev/src/: challenge_shader.wgsl  depth_shader.wgsl  lib.rs  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
wgpu-dev/src/wgsl/: depth_shader.wgsl  shader.wgsl
wgpu-play/: Cargo.toml
wgpu-play/src/: main.rs
