[package]
name = "wgpu-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "0.20.0"
pollster = "0.3.0"
bytemuck = { version = "1.16.0", features = [ "derive" ] }
image = { version = "0.25.1", feature =  [ "png", "jpeg"] }
cgmath = "0.18.0"
cfg-if = "1.0.0"
anyhow = "1.0.86"
tobj = { version = "4.0.2", features = [
    "async",
]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.20.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
reqwest = { version = "0.11" }

[build-dependencies]
anyhow = "1.0.86"
fs_extra = "1.3.0"
glob = "0.3.1"
